init API 607
