# Oddspark/modules/cms-notification/cms-notification-impl/src/main/java/cms/notification/internal/resource/v1_0/NotificationResourceImpl.java
@@ -5,9 +5,11 @@
 
 package cms.notification.internal.resource.v1_0;
 
+import cms.notification.dto.v1_0.ImportantNotificationResponse;
 import cms.notification.dto.v1_0.RegularNotificationResponse;
 import cms.notification.internal.constants.NotificationConstants;
 import cms.notification.internal.exception.NotificationBadRequestException;
+import cms.notification.internal.service.ImportantNotificationService;
 import cms.notification.internal.service.NotificationService;
 import cms.notification.resource.v1_0.NotificationResource;
 
@@ -53,6 +55,26 @@ public class NotificationResourceImpl extends BaseNotificationResourceImpl {
 			contextAcceptLanguage.getPreferredLocale(),
 			contextCompany.getTimeZone());
 	}
+
+	@Override
+	public ImportantNotificationResponse getImportantNotification(
+			Integer pagecode)
+		throws Exception {
+
+		if (pagecode == null) {
+			throw new NotificationBadRequestException(
+				NotificationConstants.ERROR_MISSING_PAGECODE,
+				"画面コードを入力してください。");
+		}
+
+		return _importantNotificationService.getImportantNotifications(
+			pagecode, contextCompany.getCompanyId(),
+			contextAcceptLanguage.getPreferredLocale(),
+			contextCompany.getTimeZone());
+	}
+
+	@Reference
+	private ImportantNotificationService _importantNotificationService;
 
 	@Reference
 	private NotificationService _notificationService;
